# mindbox_second_task

./: .env.template  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
app/application/commands/: get_categories.py  get_pairs.py  get_products.py
app/application/dto/: __init__.py  category.py  pair.py  product.py
app/application/interface/repository/: category.py  product.py
app/application/mapper/: raw_data_to_dto_pairs.py
app/infra/db/: main.py
app/infra/db/mappers/: db_category_to_dto.py  db_product_to_dto.py
app/infra/db/migrations/: env.py
app/infra/db/migrations/versions/: 001_initial_migration.py  002_add_data.py  003_add_empty_category.py
app/infra/db/models/: base.py  models.py
app/infra/db/repository/: category.py  product.py
app/infra/di/: main.py
app/infra/mediator/: main.py
app/presentation/: __main__.py  config.py
app/presentation/api/: api.py  healthcheck.py
app/presentation/middleware/: main.py
app/presentation/provider/: mediator.py  provider.py
app/presentation/router/: main.py
config/: config.template.toml
docker_compose/: docker-compose.yaml
infra/db/: models.py
infra/db/models/: models.py
