[tool.poetry]
name = "mindbox-second-task"
version = "0.1.0"
description = ""
authors = ["dkrvns <danila.krn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.40"
fastapi = "^0.115.12"
didiator = "^0.3.1"
adaptix = "^3.0.0b10"
di = "^0.79.2"
uvicorn = "^0.34.2"
alembic = "^1.15.2"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
